--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,3 +64,22 @@ footer div {
 footer a {
   color: #024e76;
   }
+
+section {
+  padding: 60px;
+  
+  }
+
+.hero {
+  background-image: url("../images/hero-bg.jpg");
+  height: 600px; 
+  background-size: cover;
+  background-position: center; 
+  }
+
+.hero-form {
+  background-color: #fce138;
+  padding: 20px;
+  width: 500px;
+  color: #024e76;
+}
